[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/death_screen/death_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/MatchupPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/EquipmentPro.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/VBoxContainer/VBoxContainer/Asteroids:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/VBoxContainer/VBoxContainer/Kills:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/VBoxContainer/VBoxContainer/ShotsFired:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel/VBoxContainer/VBoxContainer/BuildingsPlace:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel/VBoxContainer/VBoxContainer2/HBoxContainer/MainMenu:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panel/VBoxContainer/VBoxContainer2/HBoxContainer/Quit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=26]
resource_name = "fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/VBoxContainer/VBoxContainer/Asteroids:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/VBoxContainer/VBoxContainer/Kills:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/VBoxContainer/VBoxContainer/ShotsFired:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.3, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel/VBoxContainer/VBoxContainer/BuildingsPlace:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.7, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panel/VBoxContainer/VBoxContainer2/HBoxContainer/MainMenu:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.5, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panel/VBoxContainer/VBoxContainer2/HBoxContainer/Quit:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.5, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.501961 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=28]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=29]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=30]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]

[node name="DeathScreen" type="ColorRect"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 27 )
anims/fade_in = SubResource( 26 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.5
margin_top = -220.0
margin_right = 199.5
margin_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -48.0
custom_constants/separation = 32

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 367.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 28 )
text = "You Died"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 367.0
margin_bottom = 224.0
custom_constants/separation = 8

[node name="Asteroids" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 367.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 29 )
text = "Asteroids Mined: %s"
align = 1

[node name="Kills" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 34.0
margin_right = 367.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 29 )
text = "Enemies Destroyed: %s"
align = 1

[node name="ShotsFired" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 68.0
margin_right = 367.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 29 )
text = "Shots Fired: %s"
align = 1

[node name="BuildingsPlace" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 102.0
margin_right = 367.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 29 )
text = "Buildings Placed: %s"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 256.0
margin_right = 367.0
margin_bottom = 376.0
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 367.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 16
alignment = 1

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 15.0
margin_right = 175.0
margin_bottom = 48.0
rect_min_size = Vector2( 160, 48 )
custom_fonts/font = SubResource( 30 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Main Menu"

[node name="Quit" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 191.0
margin_right = 351.0
margin_bottom = 48.0
rect_min_size = Vector2( 160, 48 )
custom_fonts/font = SubResource( 30 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Quit"

[connection signal="button_up" from="Panel/VBoxContainer/VBoxContainer2/HBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/VBoxContainer2/HBoxContainer/Quit" to="." method="_on_Quit_button_up"]
